# hithto

./: .gitignore  README.md  pyproject.toml  recursive_thought_tokens_focused_branch_halting_report.json  recursive_thought_tokens_hierarchical_collapse_report.json  recursive_thought_tokens_learned_vocabulary_report.json  recursive_thought_tokens_meaning_aware_composer_report.json  recursive_thought_tokens_proof_report.json  recursive_thought_tokens_proof_report_2.json  recursive_thought_tokens_ultimate_report.json  recursive_thought_tokens_ultimate_v2_report.json  recursive_thought_tokens_ultimate_v3_report.json  requirements-runpod-qwen.txt
configs/: baseline.yaml  one_level.yaml  recursive.yaml
data/: sample.jsonl
notebooks/: demo.ipynb  kaggle_focused_branch_halting.ipynb  kaggle_hacot_gemma4_e2b.ipynb  kaggle_hierarchical_collapse.ipynb  kaggle_learned_thought_vocabulary.ipynb  kaggle_meaning_aware_composer.ipynb  kaggle_native_recursive_benchmark.ipynb  kaggle_recursive_thought_tokens_proof.ipynb
reports/: hacot_gemma4_e2b_implementation_notes.md  kaggle_proof_report_evaluation.md  phase1_vertical_prototype.md  qwen_hacot_runpod_runbook.md  real_gemma_smoke.json  real_gemma_test_matrix.json  real_model_report.md  real_small_model_test_matrix.json  real_small_model_test_matrix_final_node.json  reasoning_depth_pilot_additive_seed1.json  reasoning_depth_pilot_replacement_lr1e4_seed1.json  reasoning_depth_pilot_report.md  reasoning_depth_pilot_seed1.json  recursive_validation_report.md  semantic_pretrain_reasoning_pilot.json  semantic_pretrain_reasoning_report.md  (+25 more)
(+63 files in other folders)
